apps/production/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
    k8s.apisix.apache.org/upstream-scheme: http
  name: podinfo
  namespace: podinfo
spec:
  ingressClassName: apisix
  rules:
    - host: podinfo.apps.lab.okd.local
      http:
        paths:
          - backend:
              service:
                name: podinfo
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - podinfo.apps.lab.okd.local
      secretName: podinfo-ingress-tls
